完成oidc权限设置
