# website/controllers/s3_file_converter.go
@@ -8,6 +8,7 @@ import (
 	"www.github.com/dingsongjie/file-help/website/models/converter"
 )
 
+// @Security BearerAuth
 // @BasePath /
 // GetFisrtImageByGavingKey
 // @Summary GetFisrtImageByGavingKey
